--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,9 @@ configuration:
     description: 'A simple fitness tracker built with Spring Boot'
     developer: 'Lejla Muratović'
     email: 'lejla.muratovic@stu.ibu.edu.ba'
+
+spring:
+    data:
+      mongodb:
+        uri: mongodb+srv://new-user:Wfr9otMo6UqxJAxT@cluster0.fxeeeps.mongodb.net/?retryWrites=true&w=majority
+        database: fitness_tracker
