--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,13 +10,10 @@ spring:
       mongodb:
         uri: mongodb+srv://new-user:Wfr9otMo6UqxJAxT@cluster0.fxeeeps.mongodb.net/?retryWrites=true&w=majority
         database: fitness_tracker
+    profiles:
+      active: local
 
 security:
   jwt:
     secret: 'y28p1VqHUQSJeLt39cDmgDcvNnCFef1c1Sm8crf3ZwBLmCXGSl'
 
-amazonProperties:
-  endpointUrl: https://s3.eu-central-1.amazonaws.com
-  accessKey: AKIAZ3JTHI3XUYSVAPNE
-  secretKey: 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
-  bucketName: fitness-tracker-bucket
