--- a/fitness-tracker-frontend/package.json
+++ b/fitness-tracker-frontend/package.json
@@ -13,12 +13,14 @@
     "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.4",
     "@mui/icons-material": "^5.15.1",
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
