--- a/fitness-tracker-frontend/package.json
+++ b/fitness-tracker-frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.10.3",
